# imprint-memory

./: README.md  pyproject.toml
docs/: claude-memory-prd-v2.md  claude-memory-roadmap-v2.md
imprint_memory/: compress.py  conversation.py  db.py  memory_manager.py  server.py  tasks.py
memo_clover/: __init__.py  compress.py  console.py  db.py  memory_manager.py  server.py
tests/: test_compress.py  test_phase2.py  test_phase3.py  test_reindex.py  test_retrieval_eval.py  test_summaries.py
