[project]
name = "memo-clover"
version = "0.1.0"
description = "MemoClover: standalone long-term memory core for Claude with MCP, hybrid retrieval, message bus, and task queue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Qizhan7" }]
keywords = ["claude", "mcp", "memory", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.34.0",
    "starlette>=0.27.0",
]
vectors = [
    # Requires Ollama running locally with bge-m3 model
    # No extra Python deps — uses urllib.request to call Ollama API
]

[project.urls]
Homepage = "https://github.com/Qizhan7/MemoClover"
Repository = "https://github.com/Qizhan7/MemoClover"
Issues = "https://github.com/Qizhan7/MemoClover/issues"

[project.scripts]
memo-clover = "memo_clover.server:main"
memo-clover-console = "memo_clover.console:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memo_clover"]
